--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     </div>
     <div class="conspect">
         <h1>Конспект</h3>
+        <p>Конспект я составлял на парах и когда пересматривал записи занятий.</p>
+        <p>По этому он получился сборный</p>
         <video controls><source src="images/Запись конспекта 2024-09-28 234756.mp4"></video>
-        <!-- <video src="images/Запись конспекта 2024-09-28 234756.mp4"></video> -->
     </div>
 </body>
 </html>
